Spinning fix and text-align fix

--- a/src/component/player-card.component.less
+++ b/src/component/player-card.component.less
@@ -49,7 +49,7 @@
     }
 
     .text-container {
-      margin-top:10%;
+      padding-top:10%;
       height: 100%;
       width:100%;
     }
@@ -107,7 +107,7 @@
 
 .shield {
     user-select: none;
-    display: inline-block;
+    display: block;
     text-align: center;
 
       .name,
